--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.strings
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.strings
@@ -195,6 +195,8 @@ WritingServerContextualizationToCacheError (string message) = An error was encou
 
 FailedToGenerateServerContextualizationScripts = Failed to generate server contextualization scripts
 
+FailedToFindConnectionInfoAboutTheServer = Failed to find connection info about the server
+
 ############################################################################
 # Serialization Service
 
