--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.xlf
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.xlf
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="sr.resx" source-language="en">
     <body>
@@ -7257,6 +7257,11 @@ The Query Processor estimates that implementing the following index could improv
       <trans-unit id="FailedToGenerateServerContextualizationScripts">
         <source>Failed to generate server contextualization scripts</source>
         <target state="new">Failed to generate server contextualization scripts</target>
+        <note></note>
+      </trans-unit>
+      <trans-unit id="FailedToFindConnectionInfoAboutTheServer">
+        <source>Failed to find connection info about the server</source>
+        <target state="new">Failed to find connection info about the server</target>
         <note></note>
       </trans-unit>
     </body>
