--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.it.xlf
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.it.xlf
@@ -7248,6 +7248,17 @@ Query Processor stima che l'implementazione del seguente indice potrebbe miglior
         <target state="translated">Si è verificato un errore durante l'analisi della proprietà ScriptingListObjectsCompleteParams.ConnectionString.</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="WritingServerContextualizationToCacheError">
+        <source>An error was encountered while writing server contextualization scripts to the cache. Error: {0}</source>
+        <target state="translated">Si è verificato un errore durante la scrittura degli script di contestualizzazione del server nella cache. Errore: {0}</target>
+        <note>.
+ Parameters: 0 - message (string) </note>
+      </trans-unit>
+      <trans-unit id="FailedToGenerateServerContextualizationScripts">
+        <source>Failed to generate server contextualization scripts</source>
+        <target state="translated">Non è stato possibile generare gli script di contestualizzazione del server</target>
+        <note></note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
