--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.ja.xlf
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.ja.xlf
@@ -7248,6 +7248,17 @@ The Query Processor estimates that implementing the following index could improv
         <target state="translated">ScriptingListObjectsCompleteParams.ConnectionString プロパティの解析エラーです。</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="WritingServerContextualizationToCacheError">
+        <source>An error was encountered while writing server contextualization scripts to the cache. Error: {0}</source>
+        <target state="translated">サーバー コンテキスト化スクリプトをキャッシュに書き込み中にエラーが発生しました。エラー： {0}</target>
+        <note>.
+ Parameters: 0 - message (string) </note>
+      </trans-unit>
+      <trans-unit id="FailedToGenerateServerContextualizationScripts">
+        <source>Failed to generate server contextualization scripts</source>
+        <target state="translated">サーバー コンテキスト化スクリプトを生成できませんでした</target>
+        <note></note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
