--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.de.resx
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.de.resx
@@ -4414,4 +4414,10 @@ Der Abfrageprozessor schätzt, dass durch das Implementieren des folgenden Index
   <data name="ScriptingListObjectsCompleteParams_ConnectionString_Property_Invalid" xml:space="preserve">
     <value>Fehler beim Analysieren der ScriptingListObjectsCompleteParams.ConnectionString -Eigenschaft.</value>
   </data>
+  <data name="WritingServerContextualizationToCacheError" xml:space="preserve">
+    <value>Fehler beim Schreiben von Serverkontextualisierungsskripts in den Cache. Fehler: {0}</value>
+  </data>
+  <data name="FailedToGenerateServerContextualizationScripts" xml:space="preserve">
+    <value>Fehler beim Generieren von Serverkontextualisierungsskripts.</value>
+  </data>
 </root>
