--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.fr.resx
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.fr.resx
@@ -4414,4 +4414,10 @@ Le processeur de requêtes estime que l'implémentation de l'index suivant peut 
   <data name="ScriptingListObjectsCompleteParams_ConnectionString_Property_Invalid" xml:space="preserve">
     <value>Erreur d'analyse de la propriété ScriptingListObjectsCompleteParams.ConnectionString.</value>
   </data>
+  <data name="WritingServerContextualizationToCacheError" xml:space="preserve">
+    <value>Une erreur s'est produite lors de l'écriture des scripts de contextualisation du serveur dans le cache. Erreur : {0}</value>
+  </data>
+  <data name="FailedToGenerateServerContextualizationScripts" xml:space="preserve">
+    <value>Échec de la génération des scripts de contextualisation du serveur</value>
+  </data>
 </root>
