--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.ru.resx
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.ru.resx
@@ -4414,4 +4414,10 @@
   <data name="ScriptingListObjectsCompleteParams_ConnectionString_Property_Invalid" xml:space="preserve">
     <value>Ошибка при анализе свойства ScriptingListObjectsCompleteParams.ConnectionString.</value>
   </data>
+  <data name="WritingServerContextualizationToCacheError" xml:space="preserve">
+    <value>Произошла ошибка при записи сценариев контекстуализации сервера в кэш. Ошибка: {0}</value>
+  </data>
+  <data name="FailedToGenerateServerContextualizationScripts" xml:space="preserve">
+    <value>Не удалось создать сценарии контекстуализации сервера.</value>
+  </data>
 </root>
