--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.zh-Hans.resx
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.zh-Hans.resx
@@ -4414,4 +4414,10 @@
   <data name="ScriptingListObjectsCompleteParams_ConnectionString_Property_Invalid" xml:space="preserve">
     <value>解析 ScriptingListObjectsCompleteParams.ConnectionString 属性时出错</value>
   </data>
+  <data name="WritingServerContextualizationToCacheError" xml:space="preserve">
+    <value>将服务器上下文化脚本写入缓存时遇到错误。错误: {0}</value>
+  </data>
+  <data name="FailedToGenerateServerContextualizationScripts" xml:space="preserve">
+    <value>未能生成服务器上下文化脚本</value>
+  </data>
 </root>
