--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.zh-hans.xlf
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/transXliff/sr.zh-hans.xlf
@@ -7248,6 +7248,17 @@ The Query Processor estimates that implementing the following index could improv
         <target state="translated">解析 ScriptingListObjectsCompleteParams.ConnectionString 属性时出错</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="WritingServerContextualizationToCacheError">
+        <source>An error was encountered while writing server contextualization scripts to the cache. Error: {0}</source>
+        <target state="translated">将服务器上下文化脚本写入缓存时遇到错误。错误: {0}</target>
+        <note>.
+ Parameters: 0 - message (string) </note>
+      </trans-unit>
+      <trans-unit id="FailedToGenerateServerContextualizationScripts">
+        <source>Failed to generate server contextualization scripts</source>
+        <target state="translated">未能生成服务器上下文化脚本</target>
+        <note></note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
