--- a/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.xlf
+++ b/src/Microsoft.SqlTools.ServiceLayer/Localization/sr.xlf
@@ -7259,6 +7259,11 @@ The Query Processor estimates that implementing the following index could improv
         <target state="new">Failed to generate server contextualization scripts</target>
         <note></note>
       </trans-unit>
+      <trans-unit id="FailedToFindConnectionInfoAboutTheServer">
+        <source>Failed to find connection info about the server</source>
+        <target state="new">Failed to find connection info about the server</target>
+        <note></note>
+      </trans-unit>
     </body>
   </file>
 </xliff>
